crates/data_components/src/arrow/snapshots/data_components__arrow__indexed__tests__explain_indexed_table_point_lookup.snap
---
source: crates/data_components/src/arrow/indexed.rs
expression: indexed_plan
---
FilterExec: id@0 = 1
  CooperativeExec
    IndexedLookupExec: indexed_scan on [id]
