crates/data_components/src/arrow/snapshots/data_components__arrow__indexed__tests__explain_no_index_table.snap
---
source: crates/data_components/src/arrow/indexed.rs
assertion_line: 1739
expression: plan
---
FilterExec: id@0 = 1
  DataSourceExec: partitions=1, partition_sizes=[1]
