crates/data_components/src/arrow/snapshots/data_components__arrow__indexed__tests__explain_non_indexed_table_point_lookup.snap
---
source: crates/data_components/src/arrow/indexed.rs
assertion_line: 1786
expression: non_indexed_plan
---
FilterExec: id@0 = 1
  DataSourceExec: partitions=1, partition_sizes=[1]
