crates/data_components/src/arrow/snapshots/data_components__arrow__indexed__tests__indexed_lookup_exec_display.snap
---
source: crates/data_components/src/arrow/indexed.rs
expression: "format!(\"Single column: {}\\nMultiple columns: {}\", output, output2)"
---
Single column: IndexedLookupExec: indexed_scan on [id]
Multiple columns: IndexedLookupExec: indexed_scan on [tenant_id, user_id]
